test/errors/traits/canonical_impl_not_canonical_type/main.sk
module Main {

struct Foo {

}

trait P[T] {
    fn bar(&self)
}

instance P[()] {
    fn bar(&self) {
    }
}

fn main() {
    let f = Foo();
    f.bar();
}

}